fix for message wrap

--- a/client/src/sass/_chatroomStyles.scss
+++ b/client/src/sass/_chatroomStyles.scss
@@ -85,6 +85,5 @@
     color: $defaultButtonColor;
     padding: 0.3rem;
     padding-left: 0.8rem;
-    width: max-content;
   }
 }
